@@ -17,12 +17,6 @@
 #include <QLocalSocket>
 #include <QDir>
 
-#if QT_VERSION >= 0x050000
-#include <QStandardPaths>
-#else
-#include <QDesktopServices>
-#endif //QT_VERSION >= 0x050000
-
 #include "json/qjsonvalue.h"
 
 #include "qjsonrpcsocket.h"
@@ -39,14 +33,7 @@ LocalClient::LocalClient(QObject *parent)
 void LocalClient::run()
 {
     QLocalSocket *socket = new QLocalSocket(this);
-
-#if QT_VERSION >= 0x050000
-    QDir tempDirectory(QStandardPaths::writableLocation(QStandardPaths::TempLocation));
-#else
-    QDir tempDirectory(QDesktopServices::storageLocation(QDesktopServices::TempLocation));
-#endif //QT_VERSION >= 0x050000
-    QString serviceName = tempDirectory.absoluteFilePath("testservice");
-
+    QString serviceName = QDir::temp().absoluteFilePath("testservice");
     socket->connectToServer(serviceName);
     if (!socket->waitForConnected()) {
         qDebug() << "could not connect to server: " << socket->errorString();
