@@ -13,3 +13,4 @@ qjsonrpc 1.1 (UNRELEASED)
  * added QJsonRpcHttpClient for easy access to web services using jsonrpc
  * removed QVariant-based API for QJsonRpcMessage in favor of QJsonValue/QJsonArray
  * added support for named parameters (Alexandros Dermenakis)
+ * remove QtGui dependency in manual tests
